--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
-requests==2.22.0
+arrow==0.15.4
+atomicwrites==1.3.0
+attrs==19.1.0
+beautifulsoup4==4.8.1
+certifi==2019.9.11
+chardet==3.0.4
+cycler==0.10.0
+idna==2.8
+kiwisolver==1.0.1
+lxml==4.4.1
+matplotlib==3.0.3
+more-itertools==6.0.0
+numpy==1.16.2
 pika==1.1.0
+pluggy==0.9.0
+py==1.8.0
+pyparsing==2.3.1
+pytest==4.3.0
+python-dateutil==2.8.0
+requests==2.22.0
+selenium==3.141.0
+six==1.12.0
+soupsieve==1.9.5
+urllib3==1.25.6
